feat: add index html page and finish all interface with pass